<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/simple_dialog"
            style="@style/button_style"
            android:text="@string/simple_dialog" />

        <Button
            android:id="@+id/multiple_choice_dialog"
            style="@style/button_style"
            android:text="@string/multiple_choice_dialog" />

        <Button
            android:id="@+id/single_choice_dialog"
            style="@style/button_style"
            android:text="@string/single_choice_dialog" />

        <Button
            android:id="@+id/custom_dialog"
            style="@style/button_style"
            android:text="@string/custom_layout_dialog" />

        <Button
            android:id="@+id/date_picker_dialog"
            style="@style/button_style"
            android:text="@string/pick_date" />

        <Button
            android:id="@+id/time_picker_dialog"
            style="@style/button_style"
            android:text="@string/pick_time" />
    </LinearLayout>
</ScrollView>